namespace HeadFirst.DesignPatterns.Combining
{
    public interface IObserver{
        void Update(IQuackObservable duck);
    }
}