namespace HeadFirst.DesignPatterns.Combining
{
    public interface IQuackable:IQuackObservable
    {
        void Quack();
    }
}